Fix alignment issue

--- a/css/screen.css
+++ b/css/screen.css
@@ -676,7 +676,7 @@ a:focus {
 }
 @media (min-width: 1024px) {
   .c-search-select__group {
-    margin: 0 0 0 44px;
+    margin: -8px 0 0 44px;
   }
   .c-search-select__selected {
     margin: 8px;
